--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,8 @@
+*{  
+    
+    box-sizing: border-box;
+   }
+   
 :root{
 --amarillo: #EAC926;
 --azul: #03264C;
@@ -8,29 +13,147 @@
 }
 body
 header{
+    display: block;
     background-color:var(--amarillo);
     background-size: contain;
     font-family: 'Roboto', sans-serif;
 }
-.barra{background-color:var(--grisClaro);
-    background-size:12px;}
-#precios{
+.metodoPago{
+    text-align: center;
+}
+.navegacion{
+    display:none;
+}
+.lista1{
+    padding-left:0px;
+    text-align:left;
+    list-style:none
+}
+.hamburguesa{
+    display:flex;
+    text-align:center;
+    flex-wrap:wrap;
+    justify-content: center;
+}
+.burger-menu{
+    width:10px;
+    border-radius:5px;
+    margin:0px;
+    padding:10px;
+    background-color:var(--azul);
+    width:40px;
+    text-align:center;
+    color: white;
+}
+
+.contenedor{
+    padding: 10px;
+}
+main{
+    width: 90%;
+    text-align: center;
+   
+   }
+/* .ultima-visita{ */
+
+/* } */
+.visitaHijo{
+    display:block;
+    border-top:1px solid #ebebeb;
+    padding:15px;
+}
+.ofertas{
+    display:block;
+    box-shadow: 150px​ ​0px​ ​10px​ ​rgb​(​100​, ​100​, ​100​);
+}
+.ofertasHijo{
+    display: block;
+    align-items:center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    border-top:1px solid #ebebeb;
+    padding:15px;
+    margin:10px;
+}
+.precios{
     font-size:18px;
+    width:0.3;
 }
-#descuentos{
+.descuentos{
+    width: 0.7;
     font-size:16px;
+    color:green
 }
-#descripciones{
-    font-size:16px;
+.descripciones{
+    display: none;
+    font-size:16px;}
+
+article{
+    position: relative;
 }
+article i {
+    display: block;
+    font-size: ​16​px​;
+    padding: ​5​px​;
+    width: ​30​px​;
+    height: ​30​px​;
+    border: ​1​px​ ​solid​ #39b54a;
+    background-color:​#fff;
+    border-radius:​50;
+    position:​ absolute​;
+    right:​20​px​;
+    top:​-15​px​;
+    color:green;
+}
+
 .titulares {
-    font-size:16px;
-    color:var(--azul)}
+    font-size:24px;
+    color:var(--azul);
+    padding-left:5px;}
 
-.background-menu{
-    background-position: right;
-}
 footer
-    p {color:var(--grisClaro);
-        font-size: 12px}
+.piedepagina{
+    width: 90%;
+    text-align: center;
+}
+.piedepagina i{
+    font-size:2em;
+    color: var(--celeste);
+    text-align: center;
+    padding-bottom:10px;
+}
+.piedepagina h4{
+    padding:0px;
+}
+.piedepagina p {
+    
+    text-align:center;
+    color:var(--verde);
+    font-size: 12px;
+    padding: 5% 30%;
+        
+}
 
+
+
+ @media(min-width:361px){
+    .navegacion{
+        display:block;
+    }
+    .descripciones{
+        display:block;
+        font-size:16px;}
+    article{ 
+     box-shadow: 0px 0px 10px #646464;}
+     .hamburguesa{ 
+      display:none} 
+} 
+@media(min-width:769px){
+    .descripciones{
+        display:block;
+        font-size:16px;} 
+    article{ 
+    box-shadow: 0px 0px 10px #646464;}
+    .hamburguesa{ 
+     display:none} 
+} 
